# did-static

./: README.md  did_static.py  pyproject.toml  terms.csv
did_static/: __init__.py  bundle.py  terms.py  visitor.py
scripts/: generate_terms.py
tests/: test_did_static.py
