[tool.poetry]
name = "did-static"
version = "0.1.0"
description = "A static DID method"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "did_static"}]

[tool.poetry.dependencies]
python = "^3.7"
msgpack = "^1.0.4"
multiformats = "^0.1.4.post3"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
